--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
-*{ 
+*:not(:first-child):not(.Bestname) {
     color: white;
     background-color: black;
+}
+*{
     margin: 0;
     padding: 0;
 }
@@ -22,7 +24,7 @@ li{
 
 
 header{
-    height: 200px;
+    height: 100px;
 }
 
 
@@ -30,24 +32,31 @@ body{
     font-family: 'Raleway', sans-serif;
 }
 .bruh{
-    z-index: 2;
+    z-index: 3;
     overflow: hidden;
-    height: 5%;
-    width: 5%;
+    height: 100px;
+    width: 100px;
     position: fixed;
-    left: 2.5%;
-    bottom: 5%;
+    left: 50px;
+    bottom: 100px;
+}
+.bruh img{
+    background-color: none;
+    width: 100px;
+    height: 100px;
+    z-index: 10;
 }
 /*nav*/
+
 .logo{
     position: relative;
-    height: 200px;
+    height: 120px;
     background: black;
     justify-content: left;
 }
 .graphiclogo{
     padding: 5px;
-    height: 150px;
+    height: 100px;
     box-sizing: border-box;
 }
 .triangle{
@@ -231,7 +240,7 @@ margin-left: -50px;
     float: left;
 }
 .group1text{
-    font: 30px bold ;
+    font: 35px bold ;
     color:  red;
     text-align: center;
 }
@@ -375,7 +384,7 @@ left: -40px;
     float: left;
 }
 .group2text{
-    font: 30px bold ;
+    font: 35px bold ;
     color:  red;
     text-align: center;
 }
@@ -569,6 +578,7 @@ left: -40px;
     width: 88.888%;
 }
 .concur{
+    background-color: black;
     height: auto;
     width: 31.25%;
 }
@@ -661,14 +671,15 @@ left: -40px;
 .eko1{
     float: left;
     height: auto;
-    width: 41.66%;
+    width: 40%;
 }
 .ekonom{
     height: 100%;
     display: block;
 }
 .left {
-    padding-bottom: 2.5%;
+    height: 400px;
+    padding-bottom: 1%;
     width: 100%;
 }
 /*proprojects*/
@@ -682,6 +693,7 @@ left: -40px;
     width: 80%;
 }
 .desprojectsmain{
+    padding-top: 60px;
     height: auto;
     width: 100%;
     display: block;
@@ -707,6 +719,13 @@ left: -40px;
     top: 0px;
     left: 31.25%;
     position: absolute;
+}
+.outdesproject h1{
+    padding-top: 0px;
+    top: -20px;
+    left: 0px;
+    position: absolute;
+    z-index: 10;
 }
 /*projects2*/
 /*maingalary*/
