--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,6 @@ p{
 a{
 text-decoration: none;
 color: white;
-text-decoration: none;
 }
 .w a{
     text-decoration: none;
@@ -47,8 +46,7 @@ body{
     z-index: 10;
 }
 /*nav*/
-
-.logo{
+.logo2{
     position: relative;
     height: 120px;
     background: black;
@@ -85,8 +83,71 @@ body{
     display: none;
 }
 /*nav*/
+/*nav*/
+.mobile{
+    display: none;
+}
+@media screen and (max-width: 820px){
+    .nonmobile{
+        display: none;
+    }
+    .mobile{
+        display: block;
+    }
+    .menu li a{
+    width: 100%;
+    display: inline-block;
+    padding-top: 3px;
+    padding-bottom: 10px 
+}
+    nav{
+    height: 60px;
+    
+}
+    .wrapper{
+        z-index: 1;
+        position: relative;
+        top: 0px;
+    }
+    .logo img{
+        background-color: black;
+        width: 200px;
+    }
+    .logo{
+        margin-left: 50px;
+        margin-right: 50px;
+        text-align: center;
+    }
+    .menu{
+        background-color: black;
+        width: 100%;
+        display: none;
+        position: absolute;
+    }
+    .menuToggle img{
+        z-index: 10;
+        height: 50px;
+        width: 50px;
+        transform: rotate(90deg);
+        background-color: black;
+    }
+    .menu li{ 
+        text-align: center;
+        width: 100%;
+    }
+    .menuToggle{
+      left: 0px;
+      top: 0px;
+      position: absolute;
+      color: black;
+      display: none;
+      cursor: pointer;
+      display: inline-block;
+    }
+}
 /*advertisment*/
 .video video{
+    z-index: -10;
     width: 100%;
 }
 /*advertisment*/
@@ -193,38 +254,6 @@ body{
     left: 50%;
 margin-left: -50px;
 }
-
-/*later*/
-@media screen and (max-width: 768px){
-    .topnav a:not(:first-child) {
-        display: none;
-    }
-    .topnav a.icon{
-        float: right;
-        margin-top: -17px;
-        display: block;
-        color: #000;
-    }
-    nav{
-        width: 100%;
-        height: 100px;
-    }
-    .topnav.responsive{
-        position: relative;
-    }
-    .topnav.responsive a.icon{
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-    .topnav.responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
-}
-/*later*/
-
 /*group1*/
 /*group1*/
 /*group1*/
